# obelisk

./: .gitignore  GEMINI.md  Makefile  README.md  adk_wrapper.py  deploy_to_ae.py  deployment_guide.ipynb  mock_api.py  publish_to_agentspace_v2.sh  pyproject.toml  test_agent_config.json  test_api.html  test_frontend.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: ImageDisplay.tsx  ImageEditor.tsx  ImageUpload.tsx  TestAPI.tsx  VirtualTryOn.tsx
frontend/src/hooks/: useADKAPI.ts
obelisk_recontext_agent/: __init__.py  agent.py  api.py  prompts.py  tools.py
tests/: call_api_test.py
