[project]
name = "obelisk_recontext_agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeremy Wortz",email = "jwortz@google.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dotenv",
    "flask",
    "google-auth",
    "google-genai (>=1.31.0,<2.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "google-adk (==1.10.0)",
]

[tool.poetry]
packages = [{include = "obelisk_recontext_agent"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
